<resources>
    <string name="app_name">Form Pendaftran Ketua</string>
    <string name="nim">NIM :</string>
    <string name="nama">NAMA :</string>
    <string name="sign_in">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="img_logo">IMAGE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot_password</string>
    <string name="create_account">create_account</string>
    <string name="register">register</string>
    <string name="email">Email</string>
</resources>