<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <!--Untuk Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="19.7dp"
            android:contentDescription="@string/img_logo" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#100b20"
                android:textColorHint="#a9aaac"
                tools:ignore="MissingClass">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="46dp"
                    android:autofillHints="@string/username"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_username"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="16dp"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="14dp"
                    android:textColor="#404547"
                    android:textColorHint="#76818a"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#100b20"
                android:textColorHint="#a9aaac">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="46dp"
                    android:autofillHints="@string/email"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="14dp"
                    android:textColor="#404547"
                    android:textColorHint="#76818a"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:autofillHints="@string/password"
                android:background="#0000"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:textColor="#404547"
                android:textColorHint="#76818a"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="16dp"
                android:text="@string/register" />

